// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<ForwardRef(forwardRef)
  className="Stream-root"
  size="double"
>
  <withContext(createMutationContainer(withContext(createMutationContainer(withContext(createMutationContainer(withContext(withLocalStateContainer(Relay(UserBoxContainer)))))))))
    settings={
      Object {
        "reaction": Object {
          "sortLabel": "Most Reacted",
        },
      }
    }
    viewer={null}
  />
  <Relay(CommunityGuidelinesContainerProps)
    settings={
      Object {
        "reaction": Object {
          "sortLabel": "Most Reacted",
        },
      }
    }
  />
  <withContext(withContext(createMutationContainer(withContext(createMutationContainer(withContext(withFetch(withContext(withLocalStateContainer(Relay(PostCommentFormContainer))))))))))
    settings={
      Object {
        "reaction": Object {
          "sortLabel": "Most Reacted",
        },
      }
    }
    story={
      Object {
        "id": "story-id",
        "isClosed": false,
      }
    }
  />
  <SortMenu
    onChange={[Function]}
    orderBy="CREATED_AT_ASC"
    reactionSortLabel="Most Reacted"
  />
  <ForwardRef(forwardRef)
    aria-live="polite"
    data-testid="comments-stream-log"
    id="coral-comments-stream-log"
    role="log"
  >
    <Relay(IgnoredTombstoneOrHideContainer)
      comment={
        Object {
          "id": "comment-1",
        }
      }
      key="comment-1"
      viewer={null}
    >
      <ForwardRef(forwardRef)>
        <withContext(createMutationContainer(withContext(createMutationContainer(Relay(CommentContainer)))))
          comment={
            Object {
              "id": "comment-1",
            }
          }
          settings={
            Object {
              "reaction": Object {
                "sortLabel": "Most Reacted",
              },
            }
          }
          story={
            Object {
              "id": "story-id",
              "isClosed": false,
            }
          }
          viewer={null}
        />
        <withProps(Relay(ReplyListContainer))
          comment={
            Object {
              "id": "comment-1",
            }
          }
          settings={
            Object {
              "reaction": Object {
                "sortLabel": "Most Reacted",
              },
            }
          }
          story={
            Object {
              "id": "story-id",
              "isClosed": false,
            }
          }
          viewer={null}
        />
      </ForwardRef(forwardRef)>
    </Relay(IgnoredTombstoneOrHideContainer)>
    <Relay(IgnoredTombstoneOrHideContainer)
      comment={
        Object {
          "id": "comment-2",
        }
      }
      key="comment-2"
      viewer={null}
    >
      <ForwardRef(forwardRef)>
        <withContext(createMutationContainer(withContext(createMutationContainer(Relay(CommentContainer)))))
          comment={
            Object {
              "id": "comment-2",
            }
          }
          settings={
            Object {
              "reaction": Object {
                "sortLabel": "Most Reacted",
              },
            }
          }
          story={
            Object {
              "id": "story-id",
              "isClosed": false,
            }
          }
          viewer={null}
        />
        <withProps(Relay(ReplyListContainer))
          comment={
            Object {
              "id": "comment-2",
            }
          }
          settings={
            Object {
              "reaction": Object {
                "sortLabel": "Most Reacted",
              },
            }
          }
          story={
            Object {
              "id": "story-id",
              "isClosed": false,
            }
          }
          viewer={null}
        />
      </ForwardRef(forwardRef)>
    </Relay(IgnoredTombstoneOrHideContainer)>
  </ForwardRef(forwardRef)>
</ForwardRef(forwardRef)>
`;

exports[`when there is more disables load more button 1`] = `
<ForwardRef(forwardRef)
  className="Stream-root"
  size="double"
>
  <withContext(createMutationContainer(withContext(createMutationContainer(withContext(createMutationContainer(withContext(withLocalStateContainer(Relay(UserBoxContainer)))))))))
    settings={
      Object {
        "reaction": Object {
          "sortLabel": "Most Reacted",
        },
      }
    }
    viewer={null}
  />
  <Relay(CommunityGuidelinesContainerProps)
    settings={
      Object {
        "reaction": Object {
          "sortLabel": "Most Reacted",
        },
      }
    }
  />
  <withContext(withContext(createMutationContainer(withContext(createMutationContainer(withContext(withFetch(withContext(withLocalStateContainer(Relay(PostCommentFormContainer))))))))))
    settings={
      Object {
        "reaction": Object {
          "sortLabel": "Most Reacted",
        },
      }
    }
    story={
      Object {
        "id": "story-id",
        "isClosed": false,
      }
    }
  />
  <SortMenu
    onChange={[Function]}
    orderBy="CREATED_AT_ASC"
    reactionSortLabel="Most Reacted"
  />
  <ForwardRef(forwardRef)
    aria-live="polite"
    data-testid="comments-stream-log"
    id="coral-comments-stream-log"
    role="log"
  >
    <Relay(IgnoredTombstoneOrHideContainer)
      comment={
        Object {
          "id": "comment-1",
        }
      }
      key="comment-1"
      viewer={null}
    >
      <ForwardRef(forwardRef)>
        <withContext(createMutationContainer(withContext(createMutationContainer(Relay(CommentContainer)))))
          comment={
            Object {
              "id": "comment-1",
            }
          }
          settings={
            Object {
              "reaction": Object {
                "sortLabel": "Most Reacted",
              },
            }
          }
          story={
            Object {
              "id": "story-id",
              "isClosed": false,
            }
          }
          viewer={null}
        />
        <withProps(Relay(ReplyListContainer))
          comment={
            Object {
              "id": "comment-1",
            }
          }
          settings={
            Object {
              "reaction": Object {
                "sortLabel": "Most Reacted",
              },
            }
          }
          story={
            Object {
              "id": "story-id",
              "isClosed": false,
            }
          }
          viewer={null}
        />
      </ForwardRef(forwardRef)>
    </Relay(IgnoredTombstoneOrHideContainer)>
    <Relay(IgnoredTombstoneOrHideContainer)
      comment={
        Object {
          "id": "comment-2",
        }
      }
      key="comment-2"
      viewer={null}
    >
      <ForwardRef(forwardRef)>
        <withContext(createMutationContainer(withContext(createMutationContainer(Relay(CommentContainer)))))
          comment={
            Object {
              "id": "comment-2",
            }
          }
          settings={
            Object {
              "reaction": Object {
                "sortLabel": "Most Reacted",
              },
            }
          }
          story={
            Object {
              "id": "story-id",
              "isClosed": false,
            }
          }
          viewer={null}
        />
        <withProps(Relay(ReplyListContainer))
          comment={
            Object {
              "id": "comment-2",
            }
          }
          settings={
            Object {
              "reaction": Object {
                "sortLabel": "Most Reacted",
              },
            }
          }
          story={
            Object {
              "id": "story-id",
              "isClosed": false,
            }
          }
          viewer={null}
        />
      </ForwardRef(forwardRef)>
    </Relay(IgnoredTombstoneOrHideContainer)>
    <Localized
      id="comments-stream-loadMore"
    >
      <ForwardRef(forwardRef)
        aria-controls="coral-comments-stream-log"
        disabled={true}
        fullWidth={true}
        id="coral-comments-stream-loadMore"
        onClick={[Function]}
        variant="outlined"
      >
        Load More
      </ForwardRef(forwardRef)>
    </Localized>
  </ForwardRef(forwardRef)>
</ForwardRef(forwardRef)>
`;

exports[`when there is more renders a load more button 1`] = `
<ForwardRef(forwardRef)
  className="Stream-root"
  size="double"
>
  <withContext(createMutationContainer(withContext(createMutationContainer(withContext(createMutationContainer(withContext(withLocalStateContainer(Relay(UserBoxContainer)))))))))
    settings={
      Object {
        "reaction": Object {
          "sortLabel": "Most Reacted",
        },
      }
    }
    viewer={null}
  />
  <Relay(CommunityGuidelinesContainerProps)
    settings={
      Object {
        "reaction": Object {
          "sortLabel": "Most Reacted",
        },
      }
    }
  />
  <withContext(withContext(createMutationContainer(withContext(createMutationContainer(withContext(withFetch(withContext(withLocalStateContainer(Relay(PostCommentFormContainer))))))))))
    settings={
      Object {
        "reaction": Object {
          "sortLabel": "Most Reacted",
        },
      }
    }
    story={
      Object {
        "id": "story-id",
        "isClosed": false,
      }
    }
  />
  <SortMenu
    onChange={[Function]}
    orderBy="CREATED_AT_ASC"
    reactionSortLabel="Most Reacted"
  />
  <ForwardRef(forwardRef)
    aria-live="polite"
    data-testid="comments-stream-log"
    id="coral-comments-stream-log"
    role="log"
  >
    <Relay(IgnoredTombstoneOrHideContainer)
      comment={
        Object {
          "id": "comment-1",
        }
      }
      key="comment-1"
      viewer={null}
    >
      <ForwardRef(forwardRef)>
        <withContext(createMutationContainer(withContext(createMutationContainer(Relay(CommentContainer)))))
          comment={
            Object {
              "id": "comment-1",
            }
          }
          settings={
            Object {
              "reaction": Object {
                "sortLabel": "Most Reacted",
              },
            }
          }
          story={
            Object {
              "id": "story-id",
              "isClosed": false,
            }
          }
          viewer={null}
        />
        <withProps(Relay(ReplyListContainer))
          comment={
            Object {
              "id": "comment-1",
            }
          }
          settings={
            Object {
              "reaction": Object {
                "sortLabel": "Most Reacted",
              },
            }
          }
          story={
            Object {
              "id": "story-id",
              "isClosed": false,
            }
          }
          viewer={null}
        />
      </ForwardRef(forwardRef)>
    </Relay(IgnoredTombstoneOrHideContainer)>
    <Relay(IgnoredTombstoneOrHideContainer)
      comment={
        Object {
          "id": "comment-2",
        }
      }
      key="comment-2"
      viewer={null}
    >
      <ForwardRef(forwardRef)>
        <withContext(createMutationContainer(withContext(createMutationContainer(Relay(CommentContainer)))))
          comment={
            Object {
              "id": "comment-2",
            }
          }
          settings={
            Object {
              "reaction": Object {
                "sortLabel": "Most Reacted",
              },
            }
          }
          story={
            Object {
              "id": "story-id",
              "isClosed": false,
            }
          }
          viewer={null}
        />
        <withProps(Relay(ReplyListContainer))
          comment={
            Object {
              "id": "comment-2",
            }
          }
          settings={
            Object {
              "reaction": Object {
                "sortLabel": "Most Reacted",
              },
            }
          }
          story={
            Object {
              "id": "story-id",
              "isClosed": false,
            }
          }
          viewer={null}
        />
      </ForwardRef(forwardRef)>
    </Relay(IgnoredTombstoneOrHideContainer)>
    <Localized
      id="comments-stream-loadMore"
    >
      <ForwardRef(forwardRef)
        aria-controls="coral-comments-stream-log"
        disabled={false}
        fullWidth={true}
        id="coral-comments-stream-loadMore"
        onClick={[Function]}
        variant="outlined"
      >
        Load More
      </ForwardRef(forwardRef)>
    </Localized>
  </ForwardRef(forwardRef)>
</ForwardRef(forwardRef)>
`;

exports[`when use is logged in renders correctly 1`] = `
<ForwardRef(forwardRef)
  className="Stream-root"
  size="double"
>
  <withContext(createMutationContainer(withContext(createMutationContainer(withContext(createMutationContainer(withContext(withLocalStateContainer(Relay(UserBoxContainer)))))))))
    settings={
      Object {
        "reaction": Object {
          "sortLabel": "Most Reacted",
        },
      }
    }
    viewer={Object {}}
  />
  <Relay(CommunityGuidelinesContainerProps)
    settings={
      Object {
        "reaction": Object {
          "sortLabel": "Most Reacted",
        },
      }
    }
  />
  <withContext(withContext(createMutationContainer(withContext(createMutationContainer(withContext(withFetch(withContext(withLocalStateContainer(Relay(PostCommentFormContainer))))))))))
    settings={
      Object {
        "reaction": Object {
          "sortLabel": "Most Reacted",
        },
      }
    }
    story={
      Object {
        "id": "story-id",
        "isClosed": false,
      }
    }
  />
  <SortMenu
    onChange={[Function]}
    orderBy="CREATED_AT_ASC"
    reactionSortLabel="Most Reacted"
  />
  <ForwardRef(forwardRef)
    aria-live="polite"
    data-testid="comments-stream-log"
    id="coral-comments-stream-log"
    role="log"
  >
    <Relay(IgnoredTombstoneOrHideContainer)
      comment={
        Object {
          "id": "comment-1",
        }
      }
      key="comment-1"
      viewer={Object {}}
    >
      <ForwardRef(forwardRef)>
        <withContext(createMutationContainer(withContext(createMutationContainer(Relay(CommentContainer)))))
          comment={
            Object {
              "id": "comment-1",
            }
          }
          settings={
            Object {
              "reaction": Object {
                "sortLabel": "Most Reacted",
              },
            }
          }
          story={
            Object {
              "id": "story-id",
              "isClosed": false,
            }
          }
          viewer={Object {}}
        />
        <withProps(Relay(ReplyListContainer))
          comment={
            Object {
              "id": "comment-1",
            }
          }
          settings={
            Object {
              "reaction": Object {
                "sortLabel": "Most Reacted",
              },
            }
          }
          story={
            Object {
              "id": "story-id",
              "isClosed": false,
            }
          }
          viewer={Object {}}
        />
      </ForwardRef(forwardRef)>
    </Relay(IgnoredTombstoneOrHideContainer)>
    <Relay(IgnoredTombstoneOrHideContainer)
      comment={
        Object {
          "id": "comment-2",
        }
      }
      key="comment-2"
      viewer={Object {}}
    >
      <ForwardRef(forwardRef)>
        <withContext(createMutationContainer(withContext(createMutationContainer(Relay(CommentContainer)))))
          comment={
            Object {
              "id": "comment-2",
            }
          }
          settings={
            Object {
              "reaction": Object {
                "sortLabel": "Most Reacted",
              },
            }
          }
          story={
            Object {
              "id": "story-id",
              "isClosed": false,
            }
          }
          viewer={Object {}}
        />
        <withProps(Relay(ReplyListContainer))
          comment={
            Object {
              "id": "comment-2",
            }
          }
          settings={
            Object {
              "reaction": Object {
                "sortLabel": "Most Reacted",
              },
            }
          }
          story={
            Object {
              "id": "story-id",
              "isClosed": false,
            }
          }
          viewer={Object {}}
        />
      </ForwardRef(forwardRef)>
    </Relay(IgnoredTombstoneOrHideContainer)>
  </ForwardRef(forwardRef)>
</ForwardRef(forwardRef)>
`;
